# phionyx_langchain_langgraph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: langgraph_supervisor.py  quickstart.py
src/phionyx_langchain_langgraph/: __init__.py  audit_chain.py  langchain_handler.py  langgraph_handler.py
tests/: test_envelope_chain.py  test_langchain_integration.py  test_smoke.py  test_supervisor_chain.py
